Network and UI fixes

--- a/kartwheel/app/src/main/AndroidManifest.xml
+++ b/kartwheel/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.TicketActivity" />
+        <activity android:name=".activity.GameInfoActivity" />
     </application>
 
 </manifest>
