--- a/kartwheel/app/build.gradle
+++ b/kartwheel/app/build.gradle
@@ -61,6 +61,8 @@ dependencies {
     // Because RxAndroid releases are few and far between, it is recommended you also
     // explicitly depend on RxJava's latest version for bug fixes and new features.
     compile 'io.reactivex.rxjava2:rxjava:2.0.1'
+    compile group: 'commons-io', name: 'commons-io', version: '2.5'
+
 
     provided "com.google.auto.value:auto-value:1.2"
     provided 'com.ryanharter.auto.value:auto-value-gson:0.4.6'
