--- a/kartwheel/app/src/main/AndroidManifest.xml
+++ b/kartwheel/app/src/main/AndroidManifest.xml
@@ -18,7 +18,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.TicketActivity" />
+        <activity
+            android:name=".activity.TicketActivity"
+            android:windowSoftInputMode="adjustPan" />
         <activity android:name=".activity.GameInfoActivity" />
     </application>
 
