--- a/kartwheel/app/build.gradle
+++ b/kartwheel/app/build.gradle
@@ -6,11 +6,13 @@ buildscript {
         }
     }
     dependencies {
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.1'
         classpath 'com.squareup.sqldelight:gradle-plugin:0.6.1'
     }
 }
 
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 apply plugin: 'com.squareup.sqldelight'
 
 android {
@@ -43,6 +45,9 @@ android {
     packagingOptions {
         exclude 'META-INF/rxjava.properties'
     }
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
+    }
 }
 
 dependencies {
@@ -63,7 +68,7 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxjava:2.0.1'
     compile 'com.jakewharton:butterknife:8.5.1'
     compile group: 'commons-io', name: 'commons-io', version: '2.5'
-
+    compile 'org.jetbrains.kotlin:kotlin-stdlib:1.1.1'
 
     provided "com.google.auto.value:auto-value:1.2"
     provided 'com.ryanharter.auto.value:auto-value-gson:0.4.6'
