--- a/kartwheel/app/build.gradle
+++ b/kartwheel/app/build.gradle
@@ -28,7 +28,7 @@ android {
     }
     buildTypes {
         debug {
-            buildConfigField "String", "SERVER", "\"http://localhost:3000\""
+            buildConfigField "String", "SERVER", "\"http://10.0.2.2:3000\""
         }
 
         release {
