--- a/kartwheel/app/build.gradle
+++ b/kartwheel/app/build.gradle
@@ -79,5 +79,7 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     testCompile 'junit:junit:4.12'
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+    testCompile 'com.squareup.okhttp3:mockwebserver:3.5.0'
+
 }
 
