--- a/kartwheel/app/build.gradle
+++ b/kartwheel/app/build.gradle
@@ -50,6 +50,9 @@ android {
         main.java.srcDirs += 'src/main/kotlin'
         test.java.srcDirs += 'src/test/kotlin'
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
