--- a/kartwheel/app/build.gradle
+++ b/kartwheel/app/build.gradle
@@ -6,16 +6,23 @@ buildscript {
         maven {
             url "https://plugins.gradle.org/m2/"
         }
+        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.squareup.sqldelight:gradle-plugin:0.6.1'
+        classpath 'io.fabric.tools:gradle:1.+'
     }
 }
 
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'com.squareup.sqldelight'
+apply plugin: 'io.fabric'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
 
 android {
     compileSdkVersion 25
@@ -74,6 +81,9 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.5.1'
     compile group: 'commons-io', name: 'commons-io', version: '2.5'
     compile 'org.jetbrains.kotlin:kotlin-stdlib:1.1.1'
+    compile('com.crashlytics.sdk.android:crashlytics:2.6.7@aar') {
+        transitive = true;
+    }
 
     provided "com.google.auto.value:auto-value:1.2"
     provided 'com.ryanharter.auto.value:auto-value-gson:0.4.6'
