--- a/kartwheel/app/src/main/AndroidManifest.xml
+++ b/kartwheel/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="7205cd5b0cf9a4b0c7a6f0d185d18d9f7478da23" />
         <activity
             android:name=".activity.TicketActivity"
             android:windowSoftInputMode="adjustPan">
