--- a/kartwheel/app/build.gradle
+++ b/kartwheel/app/build.gradle
@@ -79,7 +79,7 @@ dependencies {
     // explicitly depend on RxJava's latest version for bug fixes and new features.
     compile 'io.reactivex.rxjava2:rxjava:2.0.1'
     compile 'com.jakewharton:butterknife:8.5.1'
-    compile group: 'commons-io', name: 'commons-io', version: '2.5'
+    compile 'com.google.guava:guava:20.0'
     compile 'org.jetbrains.kotlin:kotlin-stdlib:1.1.1'
     compile('com.crashlytics.sdk.android:crashlytics:2.6.7@aar') {
         transitive = true;
