--- a/kartwheel/app/build.gradle
+++ b/kartwheel/app/build.gradle
@@ -67,32 +67,32 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.squareup.sqlbrite:sqlbrite:1.1.1'
+    // Because RxAndroid releases are few and far between, it is recommended you also
+    // explicitly depend on RxJava's latest version for bug fixes and new features.
+    compile('com.crashlytics.sdk.android:crashlytics:2.6.7@aar') {
+        transitive = true;
+    }
+
+    testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+
+    compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.squareup.sqlbrite:sqlbrite:1.1.1'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.okhttp3:okhttp:3.5.0'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    // Because RxAndroid releases are few and far between, it is recommended you also
-    // explicitly depend on RxJava's latest version for bug fixes and new features.
     compile 'io.reactivex.rxjava2:rxjava:2.0.1'
     compile 'com.jakewharton:butterknife:8.5.1'
     compile 'com.google.guava:guava:20.0'
     compile 'org.jetbrains.kotlin:kotlin-stdlib:1.1.1'
-    compile('com.crashlytics.sdk.android:crashlytics:2.6.7@aar') {
-        transitive = true;
-    }
-
-    provided "com.google.auto.value:auto-value:1.2"
-    provided 'com.ryanharter.auto.value:auto-value-gson:0.4.6'
-    annotationProcessor "com.google.auto.value:auto-value:1.2"
-    annotationProcessor 'com.ryanharter.auto.value:auto-value-gson:0.4.6'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     testCompile 'junit:junit:4.12'
-    testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     testCompile 'com.squareup.okhttp3:mockwebserver:3.5.0'
-
+    kapt 'com.google.auto.value:auto-value:1.2'
+    kapt 'com.ryanharter.auto.value:auto-value-gson:0.4.6'
+    kapt 'com.jakewharton:butterknife-compiler:8.5.1'
+    provided 'com.google.auto.value:auto-value:1.2'
+    provided 'com.ryanharter.auto.value:auto-value-gson:0.4.6'
 }
 
