--- a/kartwheel/app/build.gradle
+++ b/kartwheel/app/build.gradle
@@ -1,5 +1,15 @@
 buildscript {
+    ext.android_support_version = '25.3.1'
+    ext.autovalue_version = '1.2'
+    ext.autovalue_gson_version = '0.4.6'
+    ext.crashlytics_version = '2.6.7'
+    ext.gson_version = '2.8.0'
+    ext.junit_version = '4.12'
     ext.kotlin_version = '1.1.2-3'
+    ext.okhttp3_version = '3.5.0'
+    ext.retrofit_version = '2.1.0'
+    ext.sqlbrite_version = '1.1.1'
+    ext.sqldelight_version = '0.6.1'
 
     repositories {
         jcenter()
@@ -10,7 +20,7 @@ buildscript {
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.squareup.sqldelight:gradle-plugin:0.6.1'
+        classpath "com.squareup.sqldelight:gradle-plugin:$sqldelight_version"
         classpath 'io.fabric.tools:gradle:1.+'
     }
 }
@@ -63,32 +73,23 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.squareup.sqlbrite:sqlbrite:1.1.1'
-    // Because RxAndroid releases are few and far between, it is recommended you also
-    // explicitly depend on RxJava's latest version for bug fixes and new features.
-    compile('com.crashlytics.sdk.android:crashlytics:2.6.7@aar') {
+    compile("com.crashlytics.sdk.android:crashlytics:$crashlytics_version@aar") {
         transitive = true;
     }
-
-    testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.squareup.sqlbrite:sqlbrite:1.1.1'
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.squareup.okhttp3:okhttp:3.5.0'
-    compile 'com.google.code.gson:gson:2.8.0'
+    compile "com.android.support:appcompat-v7:$android_support_version"
+    compile "com.android.support:design:$android_support_version"
+    compile "com.squareup.retrofit2:retrofit:$retrofit_version"
+    compile "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    compile "com.squareup.sqlbrite:sqlbrite:$sqlbrite_version"
+    compile "com.squareup.okhttp3:okhttp:$okhttp3_version"
+    compile "com.google.code.gson:gson:$gson_version"
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    testCompile 'junit:junit:4.12'
-    testCompile 'com.squareup.okhttp3:mockwebserver:3.5.0'
-    kapt 'com.google.auto.value:auto-value:1.2'
-    kapt 'com.ryanharter.auto.value:auto-value-gson:0.4.6'
-    provided 'com.google.auto.value:auto-value:1.2'
-    provided 'com.ryanharter.auto.value:auto-value-gson:0.4.6'
+    testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+    testCompile "junit:junit:$junit_version"
+    testCompile "com.squareup.okhttp3:mockwebserver:$okhttp3_version"
+    kapt "com.google.auto.value:auto-value:$autovalue_version"
+    kapt "com.ryanharter.auto.value:auto-value-gson:$autovalue_gson_version"
+    provided "com.google.auto.value:auto-value:$autovalue_version"
+    provided "com.ryanharter.auto.value:auto-value-gson:$autovalue_gson_version"
 }
 
