--- a/kartwheel/app/build.gradle
+++ b/kartwheel/app/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     ext.autovalue_version = '1.4.1'
     ext.autovalue_gson_version = '0.4.6'
     ext.crashlytics_version = '2.6.7'
+    ext.espresso_version = '2.2.2'
     ext.gson_version = '2.8.0'
     ext.junit_version = '4.12'
     ext.kotlin_version = '1.1.2-3'
@@ -44,6 +45,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testFunctionalTest true
     }
     buildTypes {
         debug {
@@ -73,6 +75,11 @@ android {
 }
 
 dependencies {
+    androidTestCompile "com.android.support:support-annotations:$android_support_version"
+    androidTestCompile 'com.android.support.test:runner:0.5'
+    androidTestCompile "com.android.support.test.espresso:espresso-core:$espresso_version"
+    androidTestCompile "com.android.support.test.espresso:espresso-intents:$espresso_version"
+
     compile("com.crashlytics.sdk.android:crashlytics:$crashlytics_version@aar") {
         transitive = true;
     }
