Start work on signing up for race screen

--- a/kartwheel/app/src/main/AndroidManifest.xml
+++ b/kartwheel/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
             android:name=".activity.TicketActivity"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".activity.LoggedInActivity" />
+        <activity android:name=".activity.RaceSignUpActivity" />
     </application>
 
 </manifest>
