--- a/kartwheel/app/build.gradle
+++ b/kartwheel/app/build.gradle
@@ -4,6 +4,8 @@ buildscript {
     ext.autovalue_gson_version = '0.4.6'
     ext.crashlytics_version = '2.6.7'
     ext.espresso_version = '2.2.2'
+    ext.glide_version = '3.8.0'
+    ext.glide_okhttp3_integration_version = '1.5.0@aar'
     ext.gson_version = '2.8.0'
     ext.junit_version = '4.12'
     ext.kotlin_version = '1.1.2-3'
@@ -91,6 +93,8 @@ dependencies {
     compile "com.squareup.okhttp3:okhttp:$okhttp3_version"
     compile "com.google.code.gson:gson:$gson_version"
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile "com.github.bumptech.glide:glide:$glide_version"
+    compile "com.github.bumptech.glide:okhttp3-integration:$glide_okhttp3_integration_version"
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     testCompile "junit:junit:$junit_version"
     testCompile "com.squareup.okhttp3:mockwebserver:$okhttp3_version"
