--- a/kartwheel/app/build.gradle
+++ b/kartwheel/app/build.gradle
@@ -11,6 +11,7 @@ buildscript {
     ext.kotlin_version = '1.1.2-3'
     ext.okhttp3_version = '3.8.0'
     ext.retrofit_version = '2.3.0'
+    ext.rxandroid_version = '1.2.1'
     ext.sqlbrite_version = '1.1.1'
     ext.sqldelight_version = '0.6.1'
 
@@ -95,6 +96,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "com.github.bumptech.glide:glide:$glide_version"
     compile "com.github.bumptech.glide:okhttp3-integration:$glide_okhttp3_integration_version"
+    compile "io.reactivex:rxandroid:$rxandroid_version"
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     testCompile "junit:junit:$junit_version"
     testCompile "com.squareup.okhttp3:mockwebserver:$okhttp3_version"
