--- a/kartwheel/app/build.gradle
+++ b/kartwheel/app/build.gradle
@@ -11,7 +11,9 @@ buildscript {
     ext.google_maps_version = '10.2.6'
     ext.junit_version = '4.12'
     ext.kotlin_version = '1.1.2-3'
+    ext.mockito_version = '2.8.9'
     ext.okhttp3_version = '3.8.0'
+    ext.powermock_version = '1.7.0RC4'
     ext.retrofit_version = '2.3.0'
     ext.rxandroid_version = '1.2.1'
     ext.sqlbrite_version = '1.1.1'
@@ -105,8 +107,11 @@ dependencies {
     androidTestCompile "com.android.support.test.espresso:espresso-intents:$espresso_version"
     androidTestCompile "com.android.support.test:runner:$android_test_runner_version"
 
-    testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-    testCompile "junit:junit:$junit_version"
     testCompile "com.squareup.okhttp3:mockwebserver:$okhttp3_version"
+    testCompile "org.mockito:mockito-core:$mockito_version"
+    testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+    testCompile "org.powermock:powermock-api-mockito2:$powermock_version"
+    testCompile "org.powermock:powermock-module-junit4:$powermock_version"
+    testCompile "junit:junit:$junit_version"
 }
 
