--- a/kartwheel/app/src/main/AndroidManifest.xml
+++ b/kartwheel/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".activity.LoggedInActivity" />
         <activity android:name=".activity.RaceSignUpActivity" />
+        <activity android:name=".activity.OnboardingActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
