--- a/kartwheel/app/build.gradle
+++ b/kartwheel/app/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.autovalue_version = '1.4.1'
     ext.autovalue_gson_version = '0.4.6'
     ext.crashlytics_version = '2.6.7'
+    ext.dagger_version = '2.11'
     ext.espresso_version = '2.2.2'
     ext.glide_version = '3.8.0'
     ext.glide_okhttp3_integration_version = '1.5.0@aar'
@@ -52,7 +53,7 @@ android {
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "us.handstand.kartwheel.test.KartWheelTestRunner"
         testFunctionalTest true
     }
     buildTypes {
@@ -83,6 +84,8 @@ android {
     }
 }
 
+configurations.all { resolutionStrategy.force("com.google.code.findbugs:jsr305:3.0.1") }
+
 dependencies {
     compile "com.android.support:appcompat-v7:$android_support_version"
     compile "com.android.support:design:$android_support_version"
@@ -93,6 +96,7 @@ dependencies {
     compile "com.github.bumptech.glide:okhttp3-integration:$glide_okhttp3_integration_version"
     compile "com.google.android.gms:play-services-maps:$google_maps_version"
     compile "com.google.code.gson:gson:$gson_version"
+    compile("com.google.dagger:dagger:$dagger_version")
     compile "com.squareup.okhttp3:okhttp:$okhttp3_version"
     compile "com.squareup.retrofit2:converter-gson:$retrofit_version"
     compile "com.squareup.retrofit2:retrofit:$retrofit_version"
@@ -101,6 +105,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     kapt "com.google.auto.value:auto-value:$autovalue_version"
+    kapt("com.google.dagger:dagger-compiler:$dagger_version")
     kapt "com.ryanharter.auto.value:auto-value-gson:$autovalue_gson_version"
 
     provided "com.google.auto.value:auto-value:$autovalue_version"
@@ -121,4 +126,4 @@ dependencies {
     testCompile "junit:junit:$junit_version"
 }
 
-kapt{generateStubs = true}
+kapt { generateStubs = true }
