--- a/kartwheel/app/build.gradle
+++ b/kartwheel/app/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     ext.glide_okhttp3_integration_version = '1.5.0@aar'
     ext.gson_version = '2.8.0'
     ext.google_maps_version = '10.2.6'
+    ext.google_phonenumber_version = '8.5.0'
     ext.junit_version = '4.12'
     ext.kotlin_version = '1.1.2-3'
     ext.mockito_version = '2.8.9'
@@ -96,7 +97,8 @@ dependencies {
     compile "com.github.bumptech.glide:okhttp3-integration:$glide_okhttp3_integration_version"
     compile "com.google.android.gms:play-services-maps:$google_maps_version"
     compile "com.google.code.gson:gson:$gson_version"
-    compile("com.google.dagger:dagger:$dagger_version")
+    compile "com.google.dagger:dagger:$dagger_version"
+    compile "com.googlecode.libphonenumber:libphonenumber:$google_phonenumber_version"
     compile "com.squareup.okhttp3:okhttp:$okhttp3_version"
     compile "com.squareup.retrofit2:converter-gson:$retrofit_version"
     compile "com.squareup.retrofit2:retrofit:$retrofit_version"
