--- a/kartwheel/app/build.gradle
+++ b/kartwheel/app/build.gradle
@@ -136,6 +136,12 @@ dependencies {
     provided "com.ryanharter.auto.value:auto-value-gson:$autovalue_gson_version"
 
     androidTestCompile "com.android.support:support-annotations:$android_support_version"
+    androidTestCompile("com.android.support.test.espresso:espresso-contrib:$espresso_version") {
+        exclude group: 'com.android.support', module: 'appcompat'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude group: 'com.android.support', module: 'recyclerview-v7'
+        exclude group: 'com.android.support', module: 'design'
+    }
     androidTestCompile "com.android.support.test.espresso:espresso-core:$espresso_version"
     androidTestCompile "com.android.support.test.espresso:espresso-intents:$espresso_version"
     androidTestCompile "com.android.support.test:runner:$android_test_runner_version"
