--- a/kartwheel/app/build.gradle
+++ b/kartwheel/app/build.gradle
@@ -15,7 +15,7 @@ buildscript {
         google_maps_version = '11.0.1'
         google_phonenumber_version = '8.5.0'
         junit_version = '4.12'
-        kotlin_version = '1.1.2-5'
+        kotlin_version = '1.1.3'
         mockito_version = '2.8.9'
         okhttp3_version = '3.8.0'
         powermock_version = '1.7.0RC4'
