--- a/kartwheel/app/build.gradle
+++ b/kartwheel/app/build.gradle
@@ -17,6 +17,7 @@ buildscript {
         junit_version = '4.12'
         kotlin_version = '1.1.3'
         mockito_version = '2.8.9'
+        multidex_version = '1.0.0'
         okhttp3_version = '3.8.0'
         powermock_version = '1.7.0RC4'
         pubnub_version = '4.6.3'
@@ -66,7 +67,7 @@ android {
             buildConfigField "String", "SERVER", "\"http://10.0.2.2:3000\""
             buildConfigField "String", "SERVER_FRAGMENT", "\"\""
             debuggable true
-            minifyEnabled true
+            minifyEnabled false
             resValue "string", "google_maps_key", "TODO"
         }
         staging {
@@ -79,7 +80,7 @@ android {
             buildConfigField "String", "SERVER", "\"http://api.staging.handstandwith.us\""
             buildConfigField "String", "SERVER_FRAGMENT", "\"kart/v1/\""
             debuggable true
-            minifyEnabled true
+            minifyEnabled false
             resValue "string", "google_maps_key", "TODO"
             signingConfig signingConfigs.debug
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -103,11 +104,12 @@ android {
     defaultConfig {
         applicationId "us.handstand.kartwheel"
         minSdkVersion 19
+        multiDexEnabled true
         targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
         testInstrumentationRunner "us.handstand.kartwheel.test.KartWheelTestRunner"
         testFunctionalTest true
+        versionCode 1
+        versionName "1.0"
     }
     lintOptions {
         abortOnError false
@@ -116,9 +118,9 @@ android {
         exclude 'META-INF/rxjava.properties'
     }
     sourceSets {
+        androidTest.java.srcDirs = ['src/main/kotlin', 'src/androidTest/kotlin', 'src/commonTest/kotlin']
         main.java.srcDirs = ['src/main/kotlin']
         test.java.srcDirs = ['src/main/kotlin', 'src/test/kotlin', 'src/commonTest/kotlin']
-        androidTest.java.srcDirs = ['src/main/kotlin', 'src/androidTest/kotlin', 'src/commonTest/kotlin']
     }
     testOptions {
         unitTests.returnDefaultValues = true
@@ -144,6 +146,7 @@ dependencies {
     compile "com.google.android.exoplayer:exoplayer-core:$exoplayer_version"
     compile "com.google.android.exoplayer:exoplayer-ui:$exoplayer_version"
     compile "com.google.android.gms:play-services-maps:$google_maps_version"
+    compile "com.android.support:multidex:$multidex_version"
     compile "com.google.code.gson:gson:$gson_version"
     compile "com.google.dagger:dagger:$dagger_version"
     compile "com.googlecode.libphonenumber:libphonenumber:$google_phonenumber_version"
