--- a/kartwheel/app/src/main/AndroidManifest.xml
+++ b/kartwheel/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
     <application
         android:name=".KartWheel"
         android:allowBackup="true"
-        android:icon="@mipmap/group"
+        android:icon="@drawable/launch"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
