--- a/kartwheel/app/build.gradle
+++ b/kartwheel/app/build.gradle
@@ -5,25 +5,23 @@ buildscript {
         aws_version = '2.4.4'
         autovalue_version = '1.4.1'
         autovalue_gson_version = '0.4.6'
-        crashlytics_version = '2.6.7'
+        crashlytics_version = '2.6.8'
         dagger_version = '2.11'
         espresso_version = '2.2.2'
         exoplayer_version = 'r2.4.2'
         glide_version = '3.8.0'
         glide_okhttp3_integration_version = '1.5.0@aar'
-        gson_version = '2.8.0'
+        gson_version = '2.8.1'
         google_maps_version = '11.0.1'
-        google_phonenumber_version = '8.5.0'
+        google_phonenumber_version = '8.5.2'
         junit_version = '4.12'
         kotlin_version = '1.1.3'
         mockito_version = '2.8.9'
-        multidex_version = '1.0.0'
-        okhttp3_version = '3.8.0'
+        multidex_version = '1.0.1'
+        okhttp3_version = '3.8.1'
         powermock_version = '1.7.0RC4'
-        pubnub_version = '4.6.3'
+        pubnub_version = '4.6.4'
         retrofit_version = '2.3.0'
-        rxandroid_version = '1.2.1'
-        s3mock_version = '0.2.2'
         sqlbrite_version = '1.1.1'
         sqldelight_version = '0.6.1'
         uiautomator_version = "2.1.2"
@@ -68,6 +66,7 @@ android {
             buildConfigField "String", "SERVER_FRAGMENT", "\"\""
             debuggable true
             minifyEnabled false
+            multiDexEnabled true
             resValue "string", "google_maps_key", "TODO"
         }
         staging {
@@ -81,6 +80,7 @@ android {
             buildConfigField "String", "SERVER_FRAGMENT", "\"kart/v1/\""
             debuggable true
             minifyEnabled false
+            multiDexEnabled true
             resValue "string", "google_maps_key", "TODO"
             signingConfig signingConfigs.debug
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -96,6 +96,7 @@ android {
             buildConfigField "String", "PUBNUB_SUBSCRIPTION_KEY", "\"sub-c-9700ed8c-be38-11e6-8036-0619f8945a4f\""
             debuggable false
             minifyEnabled true
+            multiDexEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             resValue "string", "google_maps_key", "TODO"
         }
@@ -104,7 +105,6 @@ android {
     defaultConfig {
         applicationId "us.handstand.kartwheel"
         minSdkVersion 19
-        multiDexEnabled true
         targetSdkVersion 25
         testInstrumentationRunner "us.handstand.kartwheel.test.KartWheelTestRunner"
         testFunctionalTest true
@@ -134,7 +134,6 @@ configurations.all {
 }
 
 dependencies {
-
     compile "com.amazonaws:aws-android-sdk-s3:$aws_version"
     compile "com.android.support:appcompat-v7:$android_support_version"
     compile "com.android.support:design:$android_support_version"
