--- a/kartwheel/app/build.gradle
+++ b/kartwheel/app/build.gradle
@@ -15,7 +15,7 @@ buildscript {
         google_maps_version = '11.0.2'
         google_phonenumber_version = '8.5.2'
         junit_version = '4.12'
-        kotlin_version = '1.1.3'
+        kotlin_version = '1.1.3-2'
         mockito_version = '2.8.9'
         multidex_version = '1.0.1'
         okhttp3_version = '3.8.1'
