--- a/kartwheel/app/build.gradle
+++ b/kartwheel/app/build.gradle
@@ -12,7 +12,7 @@ buildscript {
         glide_version = '3.8.0'
         glide_okhttp3_integration_version = '1.5.0@aar'
         gson_version = '2.8.1'
-        google_maps_version = '11.0.2'
+        gms_version = '11.0.2'
         google_phonenumber_version = '8.5.2'
         junit_version = '4.12'
         kotlin_version = '1.1.3-2'
@@ -20,7 +20,7 @@ buildscript {
         multidex_version = '1.0.1'
         okhttp3_version = '3.8.1'
         powermock_version = '1.7.0RC4'
-        pubnub_version = '4.6.4'
+        pubnub_version = '4.6.5'
         retrofit_version = '2.3.0'
         sqlbrite_version = '1.1.1'
         sqldelight_version = '0.6.1'
@@ -61,6 +61,7 @@ android {
             buildConfigField "String", "DEFAULT_BUDDY_URL", "\"https://s3.amazonaws.com/kartwheel-production/buddies/buddy-unicorn.png\""
             // 10.0.2.2 is the address that the android emulator uses to access the host machine
             buildConfigField "String", "PLAYER_NO_IMAGE_URL", "\"https://kartwheel-app.s3.amazonaws.com/shared/empty-profile.jpg\""
+            buildConfigField "String", "PUBNUB_PUBLISH_KEY", "\"pub-c-d910acf2-8540-453a-96d4-b68288c4c98f\""
             buildConfigField "String", "PUBNUB_SUBSCRIPTION_KEY", "\"sub-c-10a277a8-0f99-11e7-bd0e-0619f8945a4f\""
             buildConfigField "String", "SERVER", "\"http://10.0.2.2:3000\""
             buildConfigField "String", "SERVER_FRAGMENT", "\"\""
@@ -75,7 +76,8 @@ android {
             buildConfigField "String", "AWS_COGNITO_POOL_ID", "\"us-east-1:ddfe8d69-56d1-41c7-aabd-6623ce3ddf43\""
             buildConfigField "String", "DEFAULT_BUDDY_URL", "\"https://s3.amazonaws.com/kartwheel-production/buddies/buddy-unicorn.png\""
             buildConfigField "String", "PLAYER_NO_IMAGE_URL", "\"https://kartwheel-app.s3.amazonaws.com/shared/empty-profile.jpg\""
-            buildConfigField "String", "PUBNUB_SUBSCRIPTION_KEY", "\"sub-c-10a277a8-0f99-11e7-bd0e-0619f8945a4f\""
+            buildConfigField "String", "PUBNUB_PUBLISH_KEY", "\"pub-c-0c369432-d79b-470d-9f2b-0967e1ac5f91\""
+            buildConfigField "String", "PUBNUB_SUBSCRIPTION_KEY", "\"sub-c-061cf426-099e-11e7-b34d-02ee2ddab7fe\""
             buildConfigField "String", "SERVER", "\"http://api.staging.handstandwith.us\""
             buildConfigField "String", "SERVER_FRAGMENT", "\"kart/v1/\""
             debuggable true
@@ -93,6 +95,7 @@ android {
             buildConfigField "String", "SERVER", "\"https://www.handstandwith.us\""
             buildConfigField "String", "SERVER_FRAGMENT", "\"kartwheel/\""
             buildConfigField "String", "PLAYER_NO_IMAGE_URL", "\"https://kartwheel-app.s3.amazonaws.com/shared/empty-profile.jpg\""
+            buildConfigField "String", "PUBNUB_PUBLISH_KEY", "\"pub-c-691ce7ce-f922-4572-a90f-7287cd7c5df6\""
             buildConfigField "String", "PUBNUB_SUBSCRIPTION_KEY", "\"sub-c-9700ed8c-be38-11e6-8036-0619f8945a4f\""
             debuggable false
             minifyEnabled true
@@ -137,6 +140,7 @@ dependencies {
     compile "com.amazonaws:aws-android-sdk-s3:$aws_version"
     compile "com.android.support:appcompat-v7:$android_support_version"
     compile "com.android.support:design:$android_support_version"
+    compile "com.android.support:multidex:$multidex_version"
     compile("com.crashlytics.sdk.android:crashlytics:$crashlytics_version@aar") {
         transitive = true;
     }
@@ -144,10 +148,10 @@ dependencies {
     compile "com.github.bumptech.glide:okhttp3-integration:$glide_okhttp3_integration_version"
     compile "com.google.android.exoplayer:exoplayer-core:$exoplayer_version"
     compile "com.google.android.exoplayer:exoplayer-ui:$exoplayer_version"
-    compile "com.google.android.gms:play-services-maps:$google_maps_version"
-    compile "com.android.support:multidex:$multidex_version"
+    compile "com.google.android.gms:play-services-maps:$gms_version"
     compile "com.google.code.gson:gson:$gson_version"
     compile "com.google.dagger:dagger:$dagger_version"
+    compile "com.google.firebase:firebase-messaging:$gms_version"
     compile "com.googlecode.libphonenumber:libphonenumber:$google_phonenumber_version"
     compile "com.pubnub:pubnub-gson:$pubnub_version"
     compile "com.squareup.okhttp3:okhttp:$okhttp3_version"
@@ -186,3 +190,4 @@ dependencies {
 }
 
 //kapt { generateStubs = true }
+apply plugin: 'com.google.gms.google-services'
